final commit for today1

--- a/1.1 markup/1.1_markup.html
+++ b/1.1 markup/1.1_markup.html
@@ -53,8 +53,13 @@
       <!-- the input tag is a tag with many types ussaly to interact with the user some of its types are text, passwords, checknox and email -->
       <input type="text" id="input_text" />
       <!-- the aside tag is used to display some content in the side of the web page for example in an article and the non-directly related data goes in the aside tag -->
-      <aside>
+      <aside style="float: right">
         <h3>this is a heading inside a aside tag</h3>
+        <ul>
+          <li>saleh</li>
+          <li>saleh</li>
+          <li>saleh</li>
+        </ul>
         <p>
           Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iusto
           deserunt, dolore tempora amet nihil distinctio dolorem atque
