--- a/6.2 refactor with float FWP/index.html
+++ b/6.2 refactor with float FWP/index.html
@@ -12,56 +12,59 @@
     ></script>
   </head>
   <body>
-    <header class="primary-header">
-      <h1>Hello my name is <em>Saleh Kalouti</em></h1>
-      <h2>
-        i am learning to develop web pages
-        <i class="fa-solid fa-computer-mouse"></i>
-      </h2>
-    </header>
-    <main class="main_body">
-      <section id="personal_img" class="visual">
-        <img
-          src="./images/IMG_4602.JPG"
-          alt="personal pictures"
-          width="250"
-          style="border-radius: 40%; border: none"
-        />
-      </section>
-      <section id="description" class="card">
-        <h4>About me</h4>
-        <p>
-          i am now learning to develop web pages using html and css, <br />and
-          now we are adding icons to our pages very easily using
-          <a href="https://fontawesome.com/">fontawesome</a>. <br />
-          i like to read as a hobby a do not read a lo now but i still enjoy it
-          <i class="fa-solid fa-book"></i>
-        </p>
-      </section>
-      <section id="contact_info" class="card">
-        <address>
-          <h4>Find me</h4>
-          <ul style="list-style: none" id="contact_list">
-            <li>
-              <a
-                href="https://www.linkedin.com/in/saleh-kalouti/"
-                target="_blank"
-                ><i class="fa-brands fa-linkedin"></i
-              ></a>
-            </li>
-            <li>
-              <a href="https://github.com/SalehK98" target="_blank"
-                ><i class="fa-brands fa-github"></i
-              ></a>
-            </li>
-            <li>
-              <a href="mailto:salehkalouti@gmail.com" target="_blank">
-                <i class="fa-solid fa-envelope"></i
-              ></a>
-            </li>
-          </ul>
-        </address>
-      </section>
-    </main>
+    <section class="containter">
+      <header class="primary-header">
+        <h1>Hello my name is <em>Saleh Kalouti</em></h1>
+        <h2>
+          i am learning to develop web pages
+          <i class="fa-solid fa-computer-mouse"></i>
+        </h2>
+      </header>
+      <main class="main_body">
+        <section id="personal_img" class="visual">
+          <img
+            src="./images/IMG_4602.JPG"
+            alt="personal pictures"
+            width="250"
+            style="border-radius: 40%; border: none"
+          />
+        </section>
+        <section id="description" class="card">
+          <h4>About me</h4>
+          <p>
+            i am now learning to develop web pages using html and css, <br />and
+            now we are adding icons to our pages very easily using
+            <a href="https://fontawesome.com/">fontawesome</a>. <br />
+            i like to read as a hobby a do not read a lo now but i still enjoy
+            it
+            <i class="fa-solid fa-book"></i>
+          </p>
+        </section>
+        <section id="contact_info" class="card">
+          <address>
+            <h4>Find me</h4>
+            <ul style="list-style: none" id="contact_list">
+              <li>
+                <a
+                  href="https://www.linkedin.com/in/saleh-kalouti/"
+                  target="_blank"
+                  ><i class="fa-brands fa-linkedin"></i
+                ></a>
+              </li>
+              <li>
+                <a href="https://github.com/SalehK98" target="_blank"
+                  ><i class="fa-brands fa-github"></i
+                ></a>
+              </li>
+              <li>
+                <a href="mailto:salehkalouti@gmail.com" target="_blank">
+                  <i class="fa-solid fa-envelope"></i
+                ></a>
+              </li>
+            </ul>
+          </address>
+        </section>
+      </main>
+    </section>
   </body>
 </html>
