--- a/6.2 refactor with float FWP/index.html
+++ b/6.2 refactor with float FWP/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./styles.css" />
-    <title>Refactore with styling FWP</title>
+    <title>Refactore with float FWP</title>
     <script
       src="https://kit.fontawesome.com/a8665627c3.js"
       crossorigin="anonymous"
