--- a/Hotel_website/index.html
+++ b/Hotel_website/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="welcome to this amazing jotel in Boston"
+      content="welcome to this amazing Hotel in Boston"
     />
     <meta name="keywords" content="hotel boston" />
     <link rel="stylesheet" href="./css/style.css" />
